fix responsive layout bug

--- a/source/css/_base/layout.styl
+++ b/source/css/_base/layout.styl
@@ -8,10 +8,8 @@ body
   font-family font-default
   font-size 14px
   text-shadow 0 0 1px transparent
-  @media screen and (max-width: 1260px)
-    margin 0 30px
   @media screen and (max-width: 600px)
-    font-size 13px
+    font-size 12px
 
 h1, h2, h3, h4, h5, h6
   font-family font-title
@@ -50,7 +48,7 @@ a
     content: " "
     display: table
 
-  @media screen and (max-width: 1260px)
+  @media screen and (max-width: 820px)
     width 100%
 
 #main-col
