--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -9,6 +9,10 @@ article
   margin-bottom 20px
   padding 30px
 
+  @media screen and (max-width: 820px)
+    padding 15px
+    margin 8px 8px 15px 8px
+
   .post-content
     position relative
 
@@ -40,8 +44,16 @@ article
         &:hover
           text-decoration underline
 
+      @media screen and (max-width: 820px)
+        font-weight normal
+        font-size: 1.4em
+
   .entry
     line-height 1.9
+
+    @media screen and (max-width: 820px)
+      line-height 1.5
+
     p, blockquote, ul, ol, dl, table, iframe, h3, h4, h5, h6, .video-container
       margin-top 15px
 
