--- a/source/css/_partial/comment.styl
+++ b/source/css/_partial/comment.styl
@@ -3,6 +3,11 @@
   background #fff
   box-shadow 0 2px 6px rgba(100, 100, 100, 0.3)
   margin-bottom 50px
+
+  @media screen and (max-width: 600px)
+    padding 15px
+    margin 8px 8px 15px 8px
+
   .title
     font-weight normal
     margin-bottom 15px
