--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -6,3 +6,6 @@
   text-shadow 0 0 1px #fff
   box-shadow: inset 0 1px 4px rgba(0,0,0,.24);
   background #DCDCDC
+
+  @media screen and (max-width: 820px)
+    padding 10px 1em
