--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -14,6 +14,10 @@
   h2
     display none
 
+
+  @media screen and (max-width: 820px)
+    padding 0 1em
+
 #main-nav
   position absolute
   right 0
